deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cityhall
  namespace: cityhall
spec:
  selector:
    app: cityhall
  ports:
    - port: 80
      targetPort: 3000
